--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"clientId": "1125760781296881764",
 	"guildId": "1095610919486234666",
-	"token": "MTEyNTc2MDc4MTI5Njg4MTc2NA.GjB3U9.WxL3t2iVOPJ5W28oe2YU10LCSF4tNi9M4drMlY"
+	"token": "MTEyNTc2MDc4MTI5Njg4MTc2NA.GNBHeA.Jens8d4jp5XYJO3pxiMR9gD7MGZAsCvp1Y5PSs"
 }
